kubernetes/samples/istio/000-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
    missionlane.com/managed-state: infra
  name: demo
