kubernetes/samples/istio/auth-policy-config.yaml
# Here we're enabling mTLS across all the cluster (the namespace 'istio-system' (root) is the key)
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: istio-system
spec:
  mtls:
    mode: STRICT
