kubernetes/samples/istio/istio-cluster.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
