kubernetes/samples/istio/istio-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
