kubernetes/samples/istio/000-sidecar.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: default
  namespace: demo
spec:
  egress:
    - hosts:
        - "./*"               # current namespace
        - "istio-system/*"    # istio-system services
