kubernetes/samples/istio/sidecar-config.yaml
# By default; all proxies on your mesh will receive all the config required in order to reach any other proxy.
# It's important to note that by "Config" - that isn't just what you put in your DestinationRule or VirtualService,
# but also the state of all of the Endpoints for your services too, therefore whenever you do a Deployment,
# or a Pod becomes unready, or your service scales, or anything else that changes state - config is pushed to all the proxies.
# As the number of services grows, it's better, it's better to configure the proxies in the way they only
# know to which proxies in namespaces they can talk to in order to save memory and CPU
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: default
  namespace: demo
spec:
  egress:
    - hosts:
        - "./*"               # current namespace
        - "istio-system/*"    # istio-system services
